Doc DESIGN-08: added full javadoc comments to simulationRules classes